Fix coupon mobile

--- a/assets/css/components/woocommerce/woocommerce-cart-form.css
+++ b/assets/css/components/woocommerce/woocommerce-cart-form.css
@@ -41,7 +41,7 @@
 		}
 
 		.coupon {
-			@apply max-w-2xl relative flex items-center mt-4 lg:mt-0;
+			@apply max-w-2xl relative sm:flex items-center mt-4 lg:mt-0;
 
 			input {
 				@apply mr-3;
@@ -52,7 +52,7 @@
 			}
 
 			button.button {
-				@apply bg-transparent text-primary py-2 hover:bg-primary hover:text-white;
+				@apply bg-transparent text-primary py-2 hover:bg-primary hover:text-white w-full mt-2 sm:w-auto sm:mt-0;
 			}
 		}
 	}
